ensure static notices/errors don't overlap nav on small screens
fixes CNVS-5224

ensure the buffer height is the same as the message holder. we now mirror its
contents, so the browser magically does it for us

test plan:
1. use an old browser or set your user agent to an unsupported one (so the
   warning appears
2. make your screen small
3. the warning should not overlap the top right nav bar
4. reload the page
5. the warning should still not overlap the top right nav bar

Reviewed-on: https://gerrit.instructure.com/19566
Tested-by: Jenkins <jenkins@instructure.com>
Product-Review: Jon Jensen <jon@instructure.com>
QA-Review: Cam Theriault <cam@instructure.com>

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -27,12 +27,17 @@
   left: 0
   width: 100%
 
+#flash_message_buffer // contains copies of all static messages so that we reserve enough height in the ui
+  visibility: hidden
+
 #flash_message_holder
+  height: 0
+
+#flash_message_holder, #flash_message_buffer
   top: 0
   list-style: none
   margin: 0
   padding: 0
-  height: 0
   li, .ui-effects-wrapper
     margin: 0 auto !important
   li
